# reqoxidize

./: .gitignore  Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: rest_get.rs
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/client/: builder.rs  config.rs  mod.rs
crates/core/src/protocol/: mod.rs  rest.rs
crates/core/src/request/: body.rs  builder.rs  mod.rs
crates/core/src/response/: body.rs  mod.rs
src/: main.rs
