[package]
name = "reqoxidize"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli"
]

[workspace.metadata.cargo-llvm-cov]
exclude = ["tests/*"]

[alias]
test-fast = "nextest run"
coverage = "llvm-cov nextest --html --output-dir coverage"
coverage-all = "llvm-cov nextest --workspace --html"
coverage-crates = "cargo llvm-cov nextest --package core --html"

[workspace.dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utils
thiserror = "2.0.17"
anyhow = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4"
