[package]
name = "reqoxidize-core"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
http = "1"
async-trait = "0.1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "rest_get"
path = "examples/rest_get.rs"